--- a/config.gradle
+++ b/config.gradle
@@ -48,18 +48,18 @@ ext {
             applicationId    : "com.wuxiantao.wxt",
             minSdkVersion    : 16,
             targetSdkVersion : 28,
-            versionCode      : getVersionCode(true),
-            versionName      : getVersionName(),
+            // versionCode      : getVersionCode(true),
+            //versionName      : getVersionName(),
+            versionCode      : 2,
+            versionName      : "1.0.2",
             runner           : "android.support.test.runner.AndroidJUnitRunner"
     ]
-
-
     release = [
             debuggable     : false,
             //是否开启代码混淆
-            minifyEnabled  : true,
+            minifyEnabled  : false,
             //去除无用资源
-            shrinkResources: true,
+            shrinkResources: false,
             //是否zip对齐
             zipAlignEnabled: true,
     ]
@@ -111,7 +111,7 @@ ext {
             "glide-compiler"       : 'com.github.bumptech.glide:compiler:4.8.0',
             //高斯模糊
             "transformations"      : 'jp.wasabeef:glide-transformations:2.0.1',
-            // SmartRefreshLayout
+            // SmartRefreshLayout 智能刷新布局
             "smartRefreshLayout"   : 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14',
             "smartRefreshHeader"   : 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-14',
             //cardview卡片布局
@@ -164,10 +164,16 @@ ext {
             //common-java8
             "common-java8"         : 'android.arch.lifecycle:common-java8:1.1.1',
 
-            //腾讯bug管理平台
-            "crashreport"          : 'com.tencent.bugly:crashreport:3.1.0',
-            "nativecrashreport"    : 'com.tencent.bugly:nativecrashreport:3.3.0',
+            //腾讯bug管理平台[日志上传、版本升级、热更新]
+            "crashreport"          : 'com.tencent.bugly:crashreport_upgrade:latest.release',
+            "nativecrashreport"    : 'com.tencent.bugly:nativecrashreport:latest.release',
+            "tinker-android-lib"   : 'com.tencent.tinker:tinker-android-lib:1.9.14.3',
             //跑马灯
             "marqueeView"          : 'com.gongwen:marqueelibrary:1.1.3',
+            //友盟消息推送、统计
+            "um_common"            : 'com.umeng.umsdk:common:2.2.5',
+            //"um_utdid"             : 'com.umeng.umsdk:utdid:1.1.5.3',
+            "um_push"              : 'com.umeng.umsdk:push:6.0.1',
+            "analytics"              : 'com.umeng.umsdk:analytics:8.1.6',
     ]
 }
