--- a/config.gradle
+++ b/config.gradle
@@ -133,7 +133,10 @@ ext {
             //MPAndroidChart
             "MPAndroidChart"       : 'com.github.PhilJay:MPAndroidChart:v3.1.0',
 
-            //阿里百川
+
+            /**
+             * 阿里百川
+             */
             //基础安全组件（必选）
             "securityguardaar"     : 'com.taobao.android:securityguardaar3:5.4.171@aar',
             "securitybodyaar"      : 'com.taobao.android:securitybodyaar3:5.4.99@aar',
@@ -146,16 +149,17 @@ ext {
             "alibabauth_ui"        : 'com.ali.auth.sdk:alibabauth_ui:2.0.0.6@aar',
             "alibabauth_ext"       : 'com.ali.auth.sdk:alibabauth_ext:2.0.0.6@aar',
             //applink 打通“手机淘宝”与三方app的桥梁（必选）
-            "alibc_link_partner"   : 'com.alibaba.sdk.android:alibc_link_partner:4.1.6@aar',
+            "alibc_link_partner"   : 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar',
             //ut（jar包远端依赖）
-            "utdid4all"            : 'com.taobao.android:utdid4all:1.1.5.3_proguard',
+            "utdid4all"            : 'com.taobao.android:utdid4all:1.5.2',
             "monitor"              : 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc',
             //基础电商组件（必选）
-            "alibc_trade_common"   : 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.0@aar',
-            "alibc_trade_biz"      : 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.0@aar',
-            "alibc_trade_sdk"      : 'com.alibaba.sdk.android:nb_trade:4.0.0.0@aar',
+            "alibc_trade_common"   : 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.8@aar',
+            "alibc_trade_biz"      : 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.8@aar',
+            "alibc_trade_sdk"      : 'com.alibaba.sdk.android:nb_trade:4.0.0.8@aar',
             //fastjson
             "fastjson"             : 'com.alibaba:fastjson:1.2.41',
+
 
             //textdrawable
             "textdrawable"         : 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1',
@@ -164,16 +168,19 @@ ext {
             //common-java8
             "common-java8"         : 'android.arch.lifecycle:common-java8:1.1.1',
 
-            //腾讯bug管理平台[日志上传、版本升级、热更新]
+            /**
+             * 腾讯bug管理平台[日志上传、版本升级、热更新]
+             */
             "crashreport"          : 'com.tencent.bugly:crashreport_upgrade:latest.release',
             "nativecrashreport"    : 'com.tencent.bugly:nativecrashreport:latest.release',
             "tinker-android-lib"   : 'com.tencent.tinker:tinker-android-lib:1.9.14.3',
             //跑马灯
             "marqueeView"          : 'com.gongwen:marqueelibrary:1.1.3',
-            //友盟消息推送、统计
+            /**
+             * 友盟消息推送、统计
+             */
             "um_common"            : 'com.umeng.umsdk:common:2.2.5',
-            //"um_utdid"             : 'com.umeng.umsdk:utdid:1.1.5.3',
             "um_push"              : 'com.umeng.umsdk:push:6.0.1',
-            "analytics"              : 'com.umeng.umsdk:analytics:8.1.6',
+            "analytics"            : 'com.umeng.umsdk:analytics:8.1.6',
     ]
 }
