--- a/app/build.gradle
+++ b/app/build.gradle
@@ -215,4 +215,7 @@ dependencies {
    // implementation rootProject.ext.dependencies["um_utdid"]
     implementation rootProject.ext.dependencies["um_push"]
     implementation rootProject.ext.dependencies["analytics"]
+    //彩带烟花动画
+    implementation rootProject.ext.dependencies["konfetti"]
+
 }
