我的好友页面饼状图完成。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -217,5 +217,5 @@ dependencies {
     implementation rootProject.ext.dependencies["analytics"]
     implementation 'me.yifeiyuan.periscopelayout:library:1.0.0'
     implementation 'com.google.zxing:core:3.3.0'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 }
