--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["v4"]
     implementation rootProject.ext.dependencies["constraint-layout"]
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation rootProject.ext.dependencies["junit"]
     androidTestImplementation rootProject.ext.dependencies["runner"]
     androidTestImplementation rootProject.ext.dependencies["espresso"]
@@ -212,7 +214,7 @@ dependencies {
 
     //友盟消息推送、统计
     implementation rootProject.ext.dependencies["um_common"]
-   // implementation rootProject.ext.dependencies["um_utdid"]
+    // implementation rootProject.ext.dependencies["um_utdid"]
     implementation rootProject.ext.dependencies["um_push"]
     implementation rootProject.ext.dependencies["analytics"]
     implementation 'me.yifeiyuan.periscopelayout:library:1.0.0'
