--- a/app/build.gradle
+++ b/app/build.gradle
@@ -220,4 +220,5 @@ dependencies {
     implementation 'me.yifeiyuan.periscopelayout:library:1.0.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+    implementation 'org.jetbrains:annotations:15.0'
 }
