--- a/app/build.gradle
+++ b/app/build.gradle
@@ -217,8 +217,8 @@ dependencies {
     // implementation rootProject.ext.dependencies["um_utdid"]
     implementation rootProject.ext.dependencies["um_push"]
     implementation rootProject.ext.dependencies["analytics"]
-    implementation 'me.yifeiyuan.periscopelayout:library:1.0.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 }
