--- a/app/build.gradle
+++ b/app/build.gradle
@@ -221,4 +221,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.plattysoft.leonids:LeonidsLib:1.3.2'
+    implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.4'
+    implementation 'pub.devrel:easypermissions:1.0.1'
+//    implementation 'cn.bingoogolapple:bga-photopicker:1.2.6@aar'
+//    implementation 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
+//    implementation 'cn.bingoogolapple:bga-flowlayout:1.0.0@aar'
 }
