--- a/app/build.gradle
+++ b/app/build.gradle
@@ -214,10 +214,10 @@ dependencies {
     implementation rootProject.ext.dependencies["marqueeView"]
 
     //友盟消息推送、统计
-    //implementation rootProject.ext.dependencies["um_common"]
+    implementation rootProject.ext.dependencies["um_common"]
     // implementation rootProject.ext.dependencies["um_utdid"]
-   // implementation rootProject.ext.dependencies["um_push"]
-   // implementation rootProject.ext.dependencies["analytics"]
+    //implementation rootProject.ext.dependencies["um_push"]
+    implementation rootProject.ext.dependencies["analytics"]
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
     implementation 'org.jetbrains:annotations:15.0'
