--- a/config.gradle
+++ b/config.gradle
@@ -50,8 +50,8 @@ ext {
             targetSdkVersion : 28,
             // versionCode      : getVersionCode(true),
             //versionName      : getVersionName(),
-            versionCode      : 30,
-            versionName      : "30.0.0",
+            versionCode      : 31,
+            versionName      : "30.0.1",
             runner           : "android.support.test.runner.AndroidJUnitRunner"
     ]
     release = [
@@ -180,7 +180,9 @@ ext {
              * 友盟消息推送、统计
              */
            // "um_common"            : 'com.umeng.umsdk:common:2.2.5',
-            //"um_push"              : 'com.umeng.umsdk:push:6.0.1',
+            "um_common"            : 'com.umeng.umsdk:common:2.1.0',
+          //  "um_push"              : 'com.umeng.umsdk:push:6.0.1',
             //"analytics"            : 'com.umeng.umsdk:analytics:8.1.6'
+            "analytics"            : 'com.umeng.umsdk:analytics:8.1.3'
     ]
 }
